// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`CallTreeSidebar matches the snapshots when displaying data about the currently selected node 1`] = `
<Provider
  store={
    Object {
      "dispatch": [Function],
      "getState": [Function],
      "replaceReducer": [Function],
      "subscribe": [Function],
      Symbol(observable): [Function],
    }
  }
>
  <Connect(CallTreeSidebar)>
    <CallTreeSidebar
      callNodeTable={
        Object {
          "depth": Array [
            0,
            1,
            2,
            3,
            4,
            3,
            4,
            2,
            3,
          ],
          "func": Int32Array [
            0,
            1,
            2,
            3,
            4,
            5,
            4,
            6,
            7,
          ],
          "length": 9,
          "prefix": Int32Array [
            -1,
            0,
            1,
            2,
            3,
            2,
            5,
            1,
            7,
          ],
        }
      }
      dispatch={[Function]}
      lib=""
      name=""
      selectedNodeIndex={null}
      selectedThreadIndex={0}
      timings={
        Object {
          "forFunc": Object {
            "selfTime": 0,
            "totalTime": 0,
          },
          "forPath": Object {
            "jsEngineInformations": null,
            "selfTime": 0,
            "totalTime": 0,
          },
          "rootTime": 0,
        }
      }
    >
      <div
        className="sidebar sidebar-calltree"
      >
        Select a node to display some information about it.
      </div>
    </CallTreeSidebar>
  </Connect(CallTreeSidebar)>
</Provider>
`;

exports[`CallTreeSidebar matches the snapshots when displaying data about the currently selected node 2`] = `
<Provider
  store={
    Object {
      "dispatch": [Function],
      "getState": [Function],
      "replaceReducer": [Function],
      "subscribe": [Function],
      Symbol(observable): [Function],
    }
  }
>
  <Connect(CallTreeSidebar)>
    <CallTreeSidebar
      callNodeTable={
        Object {
          "depth": Array [
            0,
            1,
            2,
            3,
            4,
            3,
            4,
            2,
            3,
          ],
          "func": Int32Array [
            0,
            1,
            2,
            3,
            4,
            5,
            4,
            6,
            7,
          ],
          "length": 9,
          "prefix": Int32Array [
            -1,
            0,
            1,
            2,
            3,
            2,
            5,
            1,
            7,
          ],
        }
      }
      dispatch={[Function]}
      lib=""
      name="Cjs"
      selectedNodeIndex={2}
      selectedThreadIndex={0}
      timings={
        Object {
          "forFunc": Object {
            "selfTime": 0,
            "totalTime": 2,
          },
          "forPath": Object {
            "jsEngineInformations": null,
            "selfTime": 0,
            "totalTime": 2,
          },
          "rootTime": 4,
        }
      }
    >
      <aside
        className="sidebar sidebar-calltree"
      >
        <header
          className="sidebar-titlegroup"
        >
          <h2
            className="sidebar-title"
          >
            Cjs
          </h2>
        </header>
        <h3
          className="sidebar-title2"
        >
          About the selected path
        </h3>
        <div
          className="sidebar-details"
        >
          <SidebarDetail
            label="Running Time"
          >
            <div
              className="sidebar-label"
            >
              Running Time
              :
            </div>
            2
            ms (
            50
            %)
          </SidebarDetail>
          <SidebarDetail
            label="Self Time"
          >
            <div
              className="sidebar-label"
            >
              Self Time
              :
            </div>
            —
          </SidebarDetail>
        </div>
        <h3
          className="sidebar-title2"
        >
          This function in the tree
        </h3>
        <div
          className="sidebar-details"
        >
          <SidebarDetail
            label="Running Time"
          >
            <div
              className="sidebar-label"
            >
              Running Time
              :
            </div>
            2
            ms (
            50
            %)
          </SidebarDetail>
          <SidebarDetail
            label="Self Time"
          >
            <div
              className="sidebar-label"
            >
              Self Time
              :
            </div>
            —
          </SidebarDetail>
        </div>
      </aside>
    </CallTreeSidebar>
  </Connect(CallTreeSidebar)>
</Provider>
`;

exports[`CallTreeSidebar matches the snapshots when displaying data about the currently selected node 3`] = `
<Provider
  store={
    Object {
      "dispatch": [Function],
      "getState": [Function],
      "replaceReducer": [Function],
      "subscribe": [Function],
      Symbol(observable): [Function],
    }
  }
>
  <Connect(CallTreeSidebar)>
    <CallTreeSidebar
      callNodeTable={
        Object {
          "depth": Array [
            0,
            1,
            2,
            3,
            4,
            3,
            4,
            2,
            3,
          ],
          "func": Int32Array [
            0,
            1,
            2,
            3,
            4,
            5,
            4,
            6,
            7,
          ],
          "length": 9,
          "prefix": Int32Array [
            -1,
            0,
            1,
            2,
            3,
            2,
            5,
            1,
            7,
          ],
        }
      }
      dispatch={[Function]}
      lib=""
      name="D"
      selectedNodeIndex={3}
      selectedThreadIndex={0}
      timings={
        Object {
          "forFunc": Object {
            "selfTime": 0,
            "totalTime": 1,
          },
          "forPath": Object {
            "jsEngineInformations": null,
            "selfTime": 0,
            "totalTime": 1,
          },
          "rootTime": 4,
        }
      }
    >
      <aside
        className="sidebar sidebar-calltree"
      >
        <header
          className="sidebar-titlegroup"
        >
          <h2
            className="sidebar-title"
          >
            D
          </h2>
        </header>
        <h3
          className="sidebar-title2"
        >
          About the selected path
        </h3>
        <div
          className="sidebar-details"
        >
          <SidebarDetail
            label="Running Time"
          >
            <div
              className="sidebar-label"
            >
              Running Time
              :
            </div>
            1
            ms (
            25
            %)
          </SidebarDetail>
          <SidebarDetail
            label="Self Time"
          >
            <div
              className="sidebar-label"
            >
              Self Time
              :
            </div>
            —
          </SidebarDetail>
        </div>
        <h3
          className="sidebar-title2"
        >
          This function in the tree
        </h3>
        <div
          className="sidebar-details"
        >
          <SidebarDetail
            label="Running Time"
          >
            <div
              className="sidebar-label"
            >
              Running Time
              :
            </div>
            1
            ms (
            25
            %)
          </SidebarDetail>
          <SidebarDetail
            label="Self Time"
          >
            <div
              className="sidebar-label"
            >
              Self Time
              :
            </div>
            —
          </SidebarDetail>
        </div>
      </aside>
    </CallTreeSidebar>
  </Connect(CallTreeSidebar)>
</Provider>
`;

exports[`CallTreeSidebar matches the snapshots when displaying data about the currently selected node 4`] = `
<Provider
  store={
    Object {
      "dispatch": [Function],
      "getState": [Function],
      "replaceReducer": [Function],
      "subscribe": [Function],
      Symbol(observable): [Function],
    }
  }
>
  <Connect(CallTreeSidebar)>
    <CallTreeSidebar
      callNodeTable={
        Object {
          "depth": Array [
            0,
            1,
            2,
            3,
            4,
            3,
            4,
            2,
            3,
          ],
          "func": Int32Array [
            0,
            1,
            2,
            3,
            4,
            5,
            4,
            6,
            7,
          ],
          "length": 9,
          "prefix": Int32Array [
            -1,
            0,
            1,
            2,
            3,
            2,
            5,
            1,
            7,
          ],
        }
      }
      dispatch={[Function]}
      lib=""
      name="H"
      selectedNodeIndex={7}
      selectedThreadIndex={0}
      timings={
        Object {
          "forFunc": Object {
            "selfTime": 1,
            "totalTime": 2,
          },
          "forPath": Object {
            "jsEngineInformations": null,
            "selfTime": 1,
            "totalTime": 2,
          },
          "rootTime": 4,
        }
      }
    >
      <aside
        className="sidebar sidebar-calltree"
      >
        <header
          className="sidebar-titlegroup"
        >
          <h2
            className="sidebar-title"
          >
            H
          </h2>
        </header>
        <h3
          className="sidebar-title2"
        >
          About the selected path
        </h3>
        <div
          className="sidebar-details"
        >
          <SidebarDetail
            label="Running Time"
          >
            <div
              className="sidebar-label"
            >
              Running Time
              :
            </div>
            2
            ms (
            50
            %)
          </SidebarDetail>
          <SidebarDetail
            label="Self Time"
          >
            <div
              className="sidebar-label"
            >
              Self Time
              :
            </div>
            1ms (25%)
          </SidebarDetail>
        </div>
        <h3
          className="sidebar-title2"
        >
          This function in the tree
        </h3>
        <div
          className="sidebar-details"
        >
          <SidebarDetail
            label="Running Time"
          >
            <div
              className="sidebar-label"
            >
              Running Time
              :
            </div>
            2
            ms (
            50
            %)
          </SidebarDetail>
          <SidebarDetail
            label="Self Time"
          >
            <div
              className="sidebar-label"
            >
              Self Time
              :
            </div>
            1ms (25%)
          </SidebarDetail>
        </div>
      </aside>
    </CallTreeSidebar>
  </Connect(CallTreeSidebar)>
</Provider>
`;

exports[`CallTreeSidebar matches the snapshots when displaying data about the currently selected node 5`] = `
<Provider
  store={
    Object {
      "dispatch": [Function],
      "getState": [Function],
      "replaceReducer": [Function],
      "subscribe": [Function],
      Symbol(observable): [Function],
    }
  }
>
  <Connect(CallTreeSidebar)>
    <CallTreeSidebar
      callNodeTable={
        Object {
          "depth": Array [
            0,
            1,
            2,
            3,
            4,
            3,
            4,
            2,
            3,
          ],
          "func": Int32Array [
            0,
            1,
            2,
            3,
            4,
            5,
            4,
            6,
            7,
          ],
          "length": 9,
          "prefix": Int32Array [
            -1,
            0,
            1,
            2,
            3,
            2,
            5,
            1,
            7,
          ],
        }
      }
      dispatch={[Function]}
      lib=""
      name="Ejs"
      selectedNodeIndex={4}
      selectedThreadIndex={0}
      timings={
        Object {
          "forFunc": Object {
            "selfTime": 2,
            "totalTime": 2,
          },
          "forPath": Object {
            "jsEngineInformations": Object {
              "ion": 1,
            },
            "selfTime": 1,
            "totalTime": 1,
          },
          "rootTime": 4,
        }
      }
    >
      <aside
        className="sidebar sidebar-calltree"
      >
        <header
          className="sidebar-titlegroup"
        >
          <h2
            className="sidebar-title"
          >
            Ejs
          </h2>
        </header>
        <h3
          className="sidebar-title2"
        >
          About the selected path
        </h3>
        <div
          className="sidebar-details"
        >
          <SidebarDetail
            label="Running Time"
          >
            <div
              className="sidebar-label"
            >
              Running Time
              :
            </div>
            1
            ms (
            25
            %)
          </SidebarDetail>
          <SidebarDetail
            label="Self Time"
          >
            <div
              className="sidebar-label"
            >
              Self Time
              :
            </div>
            1ms (25%)
          </SidebarDetail>
        </div>
        <h4
          className="sidebar-title3"
        >
          JavaScript engine breakdown
        </h4>
        <JsModes
          jsModes={
            Object {
              "ion": 1,
            }
          }
        >
          <div
            className="sidebar-details"
          >
            <SidebarDetail
              key="ion"
              label="ion"
            >
              <div
                className="sidebar-label"
              >
                ion
                :
              </div>
              1
              ms (
              100
              %)
            </SidebarDetail>
          </div>
        </JsModes>
        <h3
          className="sidebar-title2"
        >
          This function in the tree
        </h3>
        <div
          className="sidebar-details"
        >
          <SidebarDetail
            label="Running Time"
          >
            <div
              className="sidebar-label"
            >
              Running Time
              :
            </div>
            2
            ms (
            50
            %)
          </SidebarDetail>
          <SidebarDetail
            label="Self Time"
          >
            <div
              className="sidebar-label"
            >
              Self Time
              :
            </div>
            2ms (50%)
          </SidebarDetail>
        </div>
      </aside>
    </CallTreeSidebar>
  </Connect(CallTreeSidebar)>
</Provider>
`;

exports[`CallTreeSidebar matches the snapshots when displaying data about the currently selected node in an inverted tree 1`] = `
<Provider
  store={
    Object {
      "dispatch": [Function],
      "getState": [Function],
      "replaceReducer": [Function],
      "subscribe": [Function],
      Symbol(observable): [Function],
    }
  }
>
  <Connect(CallTreeSidebar)>
    <CallTreeSidebar
      callNodeTable={
        Object {
          "depth": Array [
            0,
            1,
            2,
            3,
            4,
            1,
            2,
            3,
            4,
            0,
            1,
            2,
            3,
            0,
            1,
            2,
          ],
          "func": Int32Array [
            4,
            3,
            2,
            1,
            0,
            5,
            2,
            1,
            0,
            7,
            6,
            1,
            0,
            6,
            1,
            0,
          ],
          "length": 16,
          "prefix": Int32Array [
            -1,
            0,
            1,
            2,
            3,
            0,
            5,
            6,
            7,
            -1,
            9,
            10,
            11,
            -1,
            13,
            14,
          ],
        }
      }
      dispatch={[Function]}
      lib=""
      name=""
      selectedNodeIndex={null}
      selectedThreadIndex={0}
      timings={
        Object {
          "forFunc": Object {
            "selfTime": 0,
            "totalTime": 0,
          },
          "forPath": Object {
            "jsEngineInformations": null,
            "selfTime": 0,
            "totalTime": 0,
          },
          "rootTime": 0,
        }
      }
    >
      <div
        className="sidebar sidebar-calltree"
      >
        Select a node to display some information about it.
      </div>
    </CallTreeSidebar>
  </Connect(CallTreeSidebar)>
</Provider>
`;

exports[`CallTreeSidebar matches the snapshots when displaying data about the currently selected node in an inverted tree 2`] = `
<Provider
  store={
    Object {
      "dispatch": [Function],
      "getState": [Function],
      "replaceReducer": [Function],
      "subscribe": [Function],
      Symbol(observable): [Function],
    }
  }
>
  <Connect(CallTreeSidebar)>
    <CallTreeSidebar
      callNodeTable={
        Object {
          "depth": Array [
            0,
            1,
            2,
            3,
            4,
            1,
            2,
            3,
            4,
            0,
            1,
            2,
            3,
            0,
            1,
            2,
          ],
          "func": Int32Array [
            4,
            3,
            2,
            1,
            0,
            5,
            2,
            1,
            0,
            7,
            6,
            1,
            0,
            6,
            1,
            0,
          ],
          "length": 16,
          "prefix": Int32Array [
            -1,
            0,
            1,
            2,
            3,
            0,
            5,
            6,
            7,
            -1,
            9,
            10,
            11,
            -1,
            13,
            14,
          ],
        }
      }
      dispatch={[Function]}
      lib=""
      name="Ejs"
      selectedNodeIndex={0}
      selectedThreadIndex={0}
      timings={
        Object {
          "forFunc": Object {
            "selfTime": 2,
            "totalTime": 2,
          },
          "forPath": Object {
            "jsEngineInformations": Object {
              "interpreter": 2,
            },
            "selfTime": 2,
            "totalTime": 2,
          },
          "rootTime": 4,
        }
      }
    >
      <aside
        className="sidebar sidebar-calltree"
      >
        <header
          className="sidebar-titlegroup"
        >
          <h2
            className="sidebar-title"
          >
            Ejs
          </h2>
        </header>
        <h3
          className="sidebar-title2"
        >
          About the selected path
        </h3>
        <div
          className="sidebar-details"
        >
          <SidebarDetail
            label="Running Time"
          >
            <div
              className="sidebar-label"
            >
              Running Time
              :
            </div>
            2
            ms (
            50
            %)
          </SidebarDetail>
          <SidebarDetail
            label="Self Time"
          >
            <div
              className="sidebar-label"
            >
              Self Time
              :
            </div>
            2ms (50%)
          </SidebarDetail>
        </div>
        <h4
          className="sidebar-title3"
        >
          JavaScript engine breakdown
        </h4>
        <JsModes
          jsModes={
            Object {
              "interpreter": 2,
            }
          }
        >
          <div
            className="sidebar-details"
          >
            <SidebarDetail
              key="interpreter"
              label="interpreter"
            >
              <div
                className="sidebar-label"
              >
                interpreter
                :
              </div>
              2
              ms (
              100
              %)
            </SidebarDetail>
          </div>
        </JsModes>
        <h3
          className="sidebar-title2"
        >
          This function in the tree
        </h3>
        <div
          className="sidebar-details"
        >
          <SidebarDetail
            label="Running Time"
          >
            <div
              className="sidebar-label"
            >
              Running Time
              :
            </div>
            2
            ms (
            50
            %)
          </SidebarDetail>
          <SidebarDetail
            label="Self Time"
          >
            <div
              className="sidebar-label"
            >
              Self Time
              :
            </div>
            2ms (50%)
          </SidebarDetail>
        </div>
      </aside>
    </CallTreeSidebar>
  </Connect(CallTreeSidebar)>
</Provider>
`;

exports[`CallTreeSidebar matches the snapshots when displaying data about the currently selected node in an inverted tree 3`] = `
<Provider
  store={
    Object {
      "dispatch": [Function],
      "getState": [Function],
      "replaceReducer": [Function],
      "subscribe": [Function],
      Symbol(observable): [Function],
    }
  }
>
  <Connect(CallTreeSidebar)>
    <CallTreeSidebar
      callNodeTable={
        Object {
          "depth": Array [
            0,
            1,
            2,
            3,
            4,
            1,
            2,
            3,
            4,
            0,
            1,
            2,
            3,
            0,
            1,
            2,
          ],
          "func": Int32Array [
            4,
            3,
            2,
            1,
            0,
            5,
            2,
            1,
            0,
            7,
            6,
            1,
            0,
            6,
            1,
            0,
          ],
          "length": 16,
          "prefix": Int32Array [
            -1,
            0,
            1,
            2,
            3,
            0,
            5,
            6,
            7,
            -1,
            9,
            10,
            11,
            -1,
            13,
            14,
          ],
        }
      }
      dispatch={[Function]}
      lib=""
      name="H"
      selectedNodeIndex={13}
      selectedThreadIndex={0}
      timings={
        Object {
          "forFunc": Object {
            "selfTime": 1,
            "totalTime": 2,
          },
          "forPath": Object {
            "jsEngineInformations": null,
            "selfTime": 1,
            "totalTime": 1,
          },
          "rootTime": 4,
        }
      }
    >
      <aside
        className="sidebar sidebar-calltree"
      >
        <header
          className="sidebar-titlegroup"
        >
          <h2
            className="sidebar-title"
          >
            H
          </h2>
        </header>
        <h3
          className="sidebar-title2"
        >
          About the selected path
        </h3>
        <div
          className="sidebar-details"
        >
          <SidebarDetail
            label="Running Time"
          >
            <div
              className="sidebar-label"
            >
              Running Time
              :
            </div>
            1
            ms (
            25
            %)
          </SidebarDetail>
          <SidebarDetail
            label="Self Time"
          >
            <div
              className="sidebar-label"
            >
              Self Time
              :
            </div>
            1ms (25%)
          </SidebarDetail>
        </div>
        <h3
          className="sidebar-title2"
        >
          This function in the tree
        </h3>
        <div
          className="sidebar-details"
        >
          <SidebarDetail
            label="Running Time"
          >
            <div
              className="sidebar-label"
            >
              Running Time
              :
            </div>
            2
            ms (
            50
            %)
          </SidebarDetail>
          <SidebarDetail
            label="Self Time"
          >
            <div
              className="sidebar-label"
            >
              Self Time
              :
            </div>
            1ms (25%)
          </SidebarDetail>
        </div>
      </aside>
    </CallTreeSidebar>
  </Connect(CallTreeSidebar)>
</Provider>
`;

exports[`CallTreeSidebar matches the snapshots when displaying data about the currently selected node in an inverted tree 4`] = `
<Provider
  store={
    Object {
      "dispatch": [Function],
      "getState": [Function],
      "replaceReducer": [Function],
      "subscribe": [Function],
      Symbol(observable): [Function],
    }
  }
>
  <Connect(CallTreeSidebar)>
    <CallTreeSidebar
      callNodeTable={
        Object {
          "depth": Array [
            0,
            1,
            2,
            3,
            4,
            1,
            2,
            3,
            4,
            0,
            1,
            2,
            3,
            0,
            1,
            2,
          ],
          "func": Int32Array [
            4,
            3,
            2,
            1,
            0,
            5,
            2,
            1,
            0,
            7,
            6,
            1,
            0,
            6,
            1,
            0,
          ],
          "length": 16,
          "prefix": Int32Array [
            -1,
            0,
            1,
            2,
            3,
            0,
            5,
            6,
            7,
            -1,
            9,
            10,
            11,
            -1,
            13,
            14,
          ],
        }
      }
      dispatch={[Function]}
      lib=""
      name="H"
      selectedNodeIndex={10}
      selectedThreadIndex={0}
      timings={
        Object {
          "forFunc": Object {
            "selfTime": 1,
            "totalTime": 2,
          },
          "forPath": Object {
            "jsEngineInformations": null,
            "selfTime": 0,
            "totalTime": 1,
          },
          "rootTime": 4,
        }
      }
    >
      <aside
        className="sidebar sidebar-calltree"
      >
        <header
          className="sidebar-titlegroup"
        >
          <h2
            className="sidebar-title"
          >
            H
          </h2>
        </header>
        <h3
          className="sidebar-title2"
        >
          About the selected path
        </h3>
        <div
          className="sidebar-details"
        >
          <SidebarDetail
            label="Running Time"
          >
            <div
              className="sidebar-label"
            >
              Running Time
              :
            </div>
            1
            ms (
            25
            %)
          </SidebarDetail>
          <SidebarDetail
            label="Self Time"
          >
            <div
              className="sidebar-label"
            >
              Self Time
              :
            </div>
            —
          </SidebarDetail>
        </div>
        <h3
          className="sidebar-title2"
        >
          This function in the tree
        </h3>
        <div
          className="sidebar-details"
        >
          <SidebarDetail
            label="Running Time"
          >
            <div
              className="sidebar-label"
            >
              Running Time
              :
            </div>
            2
            ms (
            50
            %)
          </SidebarDetail>
          <SidebarDetail
            label="Self Time"
          >
            <div
              className="sidebar-label"
            >
              Self Time
              :
            </div>
            1ms (25%)
          </SidebarDetail>
        </div>
      </aside>
    </CallTreeSidebar>
  </Connect(CallTreeSidebar)>
</Provider>
`;

exports[`CallTreeSidebar matches the snapshots when displaying data about the currently selected node in an inverted tree 5`] = `
<Provider
  store={
    Object {
      "dispatch": [Function],
      "getState": [Function],
      "replaceReducer": [Function],
      "subscribe": [Function],
      Symbol(observable): [Function],
    }
  }
>
  <Connect(CallTreeSidebar)>
    <CallTreeSidebar
      callNodeTable={
        Object {
          "depth": Array [
            0,
            1,
            2,
            3,
            4,
            1,
            2,
            3,
            4,
            0,
            1,
            2,
            3,
            0,
            1,
            2,
          ],
          "func": Int32Array [
            4,
            3,
            2,
            1,
            0,
            5,
            2,
            1,
            0,
            7,
            6,
            1,
            0,
            6,
            1,
            0,
          ],
          "length": 16,
          "prefix": Int32Array [
            -1,
            0,
            1,
            2,
            3,
            0,
            5,
            6,
            7,
            -1,
            9,
            10,
            11,
            -1,
            13,
            14,
          ],
        }
      }
      dispatch={[Function]}
      lib=""
      name="A"
      selectedNodeIndex={15}
      selectedThreadIndex={0}
      timings={
        Object {
          "forFunc": Object {
            "selfTime": 0,
            "totalTime": 4,
          },
          "forPath": Object {
            "jsEngineInformations": null,
            "selfTime": 0,
            "totalTime": 1,
          },
          "rootTime": 4,
        }
      }
    >
      <aside
        className="sidebar sidebar-calltree"
      >
        <header
          className="sidebar-titlegroup"
        >
          <h2
            className="sidebar-title"
          >
            A
          </h2>
        </header>
        <h3
          className="sidebar-title2"
        >
          About the selected path
        </h3>
        <div
          className="sidebar-details"
        >
          <SidebarDetail
            label="Running Time"
          >
            <div
              className="sidebar-label"
            >
              Running Time
              :
            </div>
            1
            ms (
            25
            %)
          </SidebarDetail>
          <SidebarDetail
            label="Self Time"
          >
            <div
              className="sidebar-label"
            >
              Self Time
              :
            </div>
            —
          </SidebarDetail>
        </div>
        <h3
          className="sidebar-title2"
        >
          This function in the tree
        </h3>
        <div
          className="sidebar-details"
        >
          <SidebarDetail
            label="Running Time"
          >
            <div
              className="sidebar-label"
            >
              Running Time
              :
            </div>
            4
            ms (
            100
            %)
          </SidebarDetail>
          <SidebarDetail
            label="Self Time"
          >
            <div
              className="sidebar-label"
            >
              Self Time
              :
            </div>
            —
          </SidebarDetail>
        </div>
      </aside>
    </CallTreeSidebar>
  </Connect(CallTreeSidebar)>
</Provider>
`;
